Fix action bar size and alignment issues

--- a/holo-base-elements.css
+++ b/holo-base-elements.css
@@ -16,8 +16,7 @@
 }
 
 body {
-	font-family: Roboto, "Droid Sans", Arial, Helvetica, sans-serif;
-	font-size: 11pt;
+	font-family: Roboto, "Droid Sans", sans-serif;
 }
 body:before { /* This is used for the background gradient */
 	z-index: -1000;
