--- a/holo-base-widgets.css
+++ b/holo-base-widgets.css
@@ -18,7 +18,7 @@ body {
 	top: 0px;
 	left: 0px;
 	right: 0px;
-	height: 40px;
+	height: 48px;
 	
 	border-style: solid none;
 	border-width: 1px 0 2px;
@@ -40,7 +40,9 @@ footer.actionBar, footer.holo-actionBar { /* a bottom action bar must be a <foot
 
 .actionBar span, .holo-actionBar span { /* use this for text in action bars */
 	display: inline-block;
-	margin: 12px;
+	font-size: 16px;
+	margin: -1px 0 -2px;
+	padding: 14px 0 13px;
 }
 
 .actionBar button, .holo-actionBar button {
